<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFDFDF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/AppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="104dp"
        android:gravity="center"
        android:text="@string/unit_converter"
        android:textColor="#00897B"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/SourceLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SourceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="164dp"
        android:gravity="center"
        android:text="@string/source"
        android:textColor="#3F51B5"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppTitle" />

    <EditText
        android:id="@+id/ValueEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="56dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/value_to_be_converted"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SourceSpinner"
        tools:ignore="LabelFor" />

    <Spinner
        android:id="@+id/SourceSpinner"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="56dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SourceLabel" />

    <Button
        android:id="@+id/ConvertButton"
        android:layout_width="212dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ValueEditText" />

    <Spinner
        android:id="@+id/DestinationSpinner"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="56dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DestinationLabel" />

    <TextView
        android:id="@+id/ConvertedTextView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="56dp"
        android:gravity="center"
        android:text="@string/converted_value"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DestinationSpinner" />

    <TextView
        android:id="@+id/DestinationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="148dp"
        android:gravity="center"
        android:text="@string/destination_unit"
        android:textColor="#3F51B5"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConvertButton" />

    <TextView
        android:id="@+id/UnitTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="171dp"
        android:text="@string/unit_type"
        android:textColor="#673AB7"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppTitle" />

    <Spinner
        android:id="@+id/UnitTypeSpinner"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="57dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UnitTypeLabel" />

    <View
        android:id="@+id/Divider1"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="17dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UnitTypeSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>